# hunter-simple

./: .gitignore  CMakeLists.txt  bld.sh  cln.sh  cmake_cross.md  config.cmake  gen.sh  memo.md  simple.cpp
cmake/Hunter/: config.cmake
